# ScalpelRenderer

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  MakeProject.bat  bash.exe.stackdump  vs-chromium-project.txt
Assets/models/: LunaMoth.mtl  Torus.mtl
Assets/models/TorusGLTF/: Torus.gltf
Assets/pipelines/: TestPipeline.json
Assets/shaders/: MVP.glsl  TestShaderC.vert  VertexInputDefinition.glsl  VertexToFragment.glsl  shader.frag  shader.vert
Src/: ShaderCompiler.hpp  main.cpp
Src/Renderer/: CMakeLists.txt
Src/Renderer/Framework/: RenderItem.hpp
Src/Renderer/GLSL/: ShaderCompiler.hpp  TestFragmentShader.glsl  TestVertexShader.glsl  VertexInput.glsl  frag.spv  vert.spv
Src/Renderer/Vulkan/: RenderItem.hpp  VulkanBuffer.cpp  VulkanBuffer.h  VulkanCommandBuffer.cpp  VulkanCommandBuffer.h  VulkanContext.cpp  VulkanContext.h  VulkanGraphicsPipeline.cpp  VulkanGraphicsPipeline.h  VulkanImage.cpp  VulkanImage.h  VulkanRenderItem.hpp  VulkanRenderPass.cpp  VulkanRenderPass.h  VulkanRenderer.cpp  VulkanRenderer.h  VulkanSwapchain.cpp  VulkanSwapchain.h  VulkanUniform.cpp  VulkanUniform.h  VulkanVertexBuffer.cpp  VulkanVertexBuffer.h  spirv_reflect.h
